# gromex

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/gromex/: __init__.py  gromex_cli.py  grommunio.py
